# smplwav

./: CMakeLists.txt  README.md  smplwav.h  smplwav_convert.h  smplwav_mount.h  smplwav_serialise.h
app_autoloop/: CMakeLists.txt  app_autoloop.c
app_sampleauth/: CMakeLists.txt  app_sampleauth.c
cmake_support/: smplwavConfig.cmake.in
src/: CMakeLists.txt  smplwav.c  smplwav_convert.c  smplwav_internal.h  smplwav_mount.c  smplwav_serialise.c
